--- a/src/components/FluidEffect.astro
+++ b/src/components/FluidEffect.astro
@@ -10,7 +10,7 @@
     z-index: -10;
   }
 </style>
-<script lang="js">
+<script lang="js" is:inline>
   document.addEventListener('DOMContentLoaded', () => {
     initFluid();
   });
