--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,6 +51,17 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
     padding-left: max(1rem, 8vw);
     padding-right: max(1rem, 8vw);
   }
+
+  dialog[open] {
+    body {
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+    }
+  }
+  dialog::backdrop {
+    background-color: rgba(32, 31, 31, 0.853);
+  }
 </style>
 
 <script>
