--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -55,7 +55,7 @@ images['sample'] = sample;
                       src={images[member.image]}
                       alt={member.name}
                       loading="lazy"
-                      class="w-[200px] aspect-square rounded-full"
+                      class="w-[200px] aspect-square rounded-full object-cover"
                       width={200}
                       height={200}
                     />
