--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,8 +48,7 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
   }
 
   .content-container {
-    padding-left: max(1rem, 8vw);
-    padding-right: max(1rem, 8vw);
+    @apply max-w-screen-xl px-4 md:px-12 mx-auto;
   }
 
   dialog[open] {
