--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "@layouts/Layout.astro"
+import Adminnav from "@components/admin/adminhead.astro"
 ---
 
 <Layout>
+  <Adminnav/>
   <div class="p-10"></div>
   <h1>Welcome to admin</h1>
   <p>1. <a href="admin/manageUsers">Manage Users</a></p>
