--- a/src/pages/blogs/[slug].astro
+++ b/src/pages/blogs/[slug].astro
@@ -101,12 +101,14 @@ if (session?.user?.id) {
       <img src={blog.image} alt="bg" class="min-h-[240px] w-full object-cover aspect-[16/7]" />
     </div>
 
-    <div class="relative mx-auto max-w-4xl z-10 px-2 md:px-8">
+    <div class="relative mx-auto max-w-4xl z-10 px-7">
       <div
-        class="mx-auto md:space-y-12 max-w-full bg-[#13151a] py-8 md:px-4 lg:p-12 lg:py-16 xl:py-20 xl:px-16 flex flex-col justify-center items-center"
+        class="mx-auto space-y-4 md:space-y-12 max-w-full bg-[#13151a] py-8 md:px-4 lg:p-12 lg:py-16 xl:py-20 xl:px-16 flex flex-col justify-center items-center"
       >
-        <section class="mx-auto w-full max-w-prose text-center flex justify-center items-center flex-col space-y-6">
-          <time class="text-gray-300 text-2xl text-center">
+        <section
+          class="mx-auto w-full max-w-prose text-justify flex justify-center items-center flex-col space-y-6 overflow-hidden"
+        >
+          <time class="text-gray-300 text-2xl">
             {
               new Intl.DateTimeFormat('en-US', {
                 dateStyle: 'medium',
@@ -137,7 +139,7 @@ if (session?.user?.id) {
 
         <hr class="border-gray-700 w-full" />
 
-        <div class="flex gap-8 items-center mr-auto">
+        <div class="flex gap-8 items-center mr-auto p-5 md:p-0">
           <button class="text-center" id="likeButton" data-blogid={blog.id}>
             <Icon name="mdi:heart" size={20} class={`inline-block mr-2 ${liked ? 'liked' : ''}`} />
             <span class="text-white" id="like-text">{likeCount ?? 0}</span>
@@ -150,7 +152,7 @@ if (session?.user?.id) {
         <hr class="border-gray-700 w-full" />
 
         <article
-          class="min-w-full indent-10 capitalize text-justify text-gray-400 leading-7 break-words max-w-[90%] mx-auto"
+          class="min-w-full capitalize text-justify text-gray-400 leading-7 break-words max-w-[90%] mx-auto"
           set:html={blog.content}
         />
 
