--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -3,7 +3,19 @@ import GalleryHero from '@components/GalleryHero.astro';
 import Layout from '@layouts/Layout.astro';
 import { getImages } from '../lib/cloudinary';
 
-let { images, nextCursor } = await getImages('gallery');
+function shuffleArray(array: string[]) {
+  for (let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+  return array;
+}
+
+let { images: rimages, nextCursor } = await getImages('gallery');
+
+ const images = shuffleArray(rimages);
+
+
 ---
 
 <Layout title="ACE">
