--- a/src/pages/events/[slug].astro
+++ b/src/pages/events/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import DialogBoxSkeleton from '@components/DialogBoxSkeleton';
 import Layout from '@layouts/Layout.astro';
-import sample from '../../assets/images/sample.png';
 import { Image } from 'astro:assets';
 import DialogBox from '@components/EventDialogBox';
 import { getEventById } from 'utils/events';
@@ -13,6 +12,19 @@ if (!event) {
   Astro.redirect('/404');
 }
 
+const date = () => {
+  const date = new Date(event.fromDate);
+  const options: Intl.DateTimeFormatOptions = { month: 'short', day: 'numeric' };
+  const formattedDate = date.toLocaleDateString('en-US', options);
+  const hours = date.getUTCHours();
+  const minutes = date.getUTCMinutes().toString().padStart(2, '0');
+  const ampm = hours >= 12 ? 'PM' : 'AM';
+  const formattedTime = `${(hours % 12 || 12)}:${minutes} ${ampm}`;
+
+  return `${formattedDate} ${formattedTime}`;
+};
+
+
 const { name, email, id } = Astro.locals;
 ---
 
@@ -21,7 +33,7 @@ const { name, email, id } = Astro.locals;
     <h1 class="title text-6xl text-center mb-4 font-dirtyline">{event.name}</h1>
     <div class="container mx-auto">
       <div class="poster card">
-        <Image src={sample} alt="Event Poster" class="poster-img" />
+        <img src={event.image} alt="Event Poster" class="poster-img" />
       </div>
 
       <div class="description">
@@ -36,7 +48,7 @@ const { name, email, id } = Astro.locals;
         <div class="sidebar-item">
           <h3 class="text-2xl font-dirtyline">VENUE</h3>
           <p>{event.venue}</p>
-          <p>{event.fromDate} - {event.toDate}</p>
+          <p>{date}</p>
         </div>
 
         <div class="sidebar-item">
