fix: changes in event rules

--- a/src/pages/events/[slug].astro
+++ b/src/pages/events/[slug].astro
@@ -54,9 +54,7 @@ const { name, email, id } = Astro.locals;
         <div class="sidebar-item">
           <p class="text-2xl font-dirtyline">Rules:</p>
           <p>
-            resules nd regulation Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex esse quia quam expedita
-            alias voluptates, repudiandae numquam iure libero placeat quibusdam molestiae perferendis nulla rerum quas
-            unde maiores nihil magnam.
+            {event.description}
           </p>
         </div>
 
