feat:faculty page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,8 +22,9 @@ let user = session?.user?.id ? await getUser(session.user.id) : null;
       <a href="/" class="nav-link">home</a>
       <a href="/events" class="nav-link">events</a>
       <a href="/blogs" class="nav-link">blogs</a>
-      <a href="/team" class="nav-link">Team</a>
       <a href="/gallery" class="nav-link">gallery</a>
+      <a href="/team" class="nav-link">Team</a>
+      <a href="/faculty" class="nav-link">faculty</a>
       <a href="/developers" class="nav-link">dev-team</a>
 
       {
