--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -225,7 +225,7 @@ images['sample'] = sample;
     });
   });
 
-  updatePanel('2023');
+  updatePanel('faculty');
 
   const cards = document.querySelectorAll('.card');
 
